Compatible with NetBeans